--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -419,6 +419,19 @@ month={May}
 
 % Arkkitehtuuriset hajut
 
+@inproceedings{fontana_towards_2015,
+	title = {Towards Assessing Software Architecture Quality by Exploiting Code Smell Relations},
+	isbn = {978-1-4673-7076-9},
+	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7174842},
+	doi = {10.1109/SAM.2015.8},
+	pages = {1--7},
+	publisher = {{IEEE}},
+	author = {Fontana, Francesca Arcelli and Ferme, Vincenzo and Zanoni, Marco},
+	urldate = {2016-03-15},
+	date = {2015-05},
+	year = {2015}
+}
+
 @inproceedings{macia_impact_2011,
 	title = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity: An Exploratory Study},
 	isbn = {978-0-7695-4626-1 978-1-4673-0208-1},
@@ -498,6 +511,18 @@ month={May}
 }
 
 % pohdintaa
+
+
+@inproceedings{binkley_dependence_2008,
+	title = {Dependence anti patterns},
+	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4686318},
+	pages = {25--34},
+	booktitle = {Automated Software Engineering-Workshops, 2008. {ASE} Workshops 2008. 23rd {IEEE}/{ACM} International Conference on},
+	publisher = {{IEEE}},
+	author = {Binkley, David and Gold, Nicolas and Harman, Mark and Li, Zheng and Mahdavi, Kiarash and Wegener, Joachim},
+	urldate = {2016-03-18},
+	year = {2008}
+}
 
 @inproceedings{mo_mapping_2013,
 	title = {Mapping architectural decay instances to dependency models},
