--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -196,6 +196,25 @@ month={Aug}
 
 % yleinen testattavuus
 
+@article{Binder:1994:DTO:182987.184077,
+ author = {Binder, Robert V.},
+ title = {Design for Testability in Object-oriented Systems},
+ journal = {Commun. ACM},
+ issue_date = {Sept. 1994},
+ volume = {37},
+ number = {9},
+ month = sep,
+ year = {1994},
+ issn = {0001-0782},
+ pages = {87--101},
+ numpages = {15},
+ url = {http://doi.acm.org.libproxy.helsinki.fi/10.1145/182987.184077},
+ doi = {10.1145/182987.184077},
+ acmid = {184077},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
 @inproceedings{mari_impact_2003,
 	title = {The impact of maintainability on component-based software systems},
 	pages = {25--32},
@@ -515,7 +534,6 @@ month={May}
 
 @inproceedings{binkley_dependence_2008,
 	title = {Dependence anti patterns},
-	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4686318},
 	pages = {25--34},
 	booktitle = {Automated Software Engineering-Workshops, 2008. {ASE} Workshops 2008. 23rd {IEEE}/{ACM} International Conference on},
 	publisher = {{IEEE}},
